Stop squishing main image

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,9 @@ body {
 img {
   border: 5px solid white;
   width: 640px;
+  @media screen and (max-width: 500px) {
+    width: auto;
+  }
   height: auto;
   max-width: 80vw;
   box-shadow: 5px 3px 5px 1px black;
